offline auth issue repro

--- a/Client/Pages/Page2.razor
+++ b/Client/Pages/Page2.razor
@@ -10,9 +10,12 @@
 
 <CommonSelectComponent Items="AppState.WeatherForecasts"></CommonSelectComponent>
 
+
 @code {
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
+        await AppState.GetWeatherForecasts();
+
         AppState.OnChange += StateHasChanged;
     }
 
