changes for editform in modal

--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using blazorissuesrepro.Client
 @using blazorissuesrepro.Client.Shared
+@using Blazored.FluentValidation
