--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,82 +1,76 @@
 ﻿@page "/"
-@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @using Microsoft.AspNetCore.Authorization
-@using blazorissuesrepro.Services
+@using FluentValidation
 @attribute [Authorize]
 @inject IJSRuntime jsRuntime
 
 <h1>Page #1</h1>
 
-@if (ListOfDays != null && ListOfDays.Any())
-{
-    <div class="container-fluid" style="background-color: #ededee;">
-        <div class="row">
-            <div class="col">1/1/2020</div>
-            <div class="col">1/2/2020</div>
-            <div class="col">1/3/2020</div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <ul class="connectedSortable">
-                    <li class="ui-state-highlight"><JobCardCmp></JobCardCmp></li>
-                    <li class="ui-state-highlight"><JobCardCmp></JobCardCmp></li>
-                    <li class="ui-state-highlight"><JobCardCmp></JobCardCmp></li>
-                    <li class="ui-state-highlight"><JobCardCmp></JobCardCmp></li>
-                    <li class="ui-state-highlight"><JobCardCmp></JobCardCmp></li>
-                </ul>
+<button class="btn btn-primary" @onclick="ShowModal">Show Modal</button>
+
+<div class="modal fade" id="mymodal" tabindex="-1" role="dialog" aria-labelledby="mymodal" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Delete NPT events</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
-            <div class="col">
-                <ul class="connectedSortable">
-                    <li class="ui-state-highlight"><JobCardCmp></JobCardCmp></li>
-                    <li class="ui-state-highlight"><JobCardCmp></JobCardCmp></li>
-                    <li class="ui-state-highlight"><JobCardCmp></JobCardCmp></li>
-                    <li class="ui-state-highlight"><JobCardCmp></JobCardCmp></li>
-                    <li class="ui-state-highlight"><JobCardCmp></JobCardCmp></li>
-                </ul>
-            </div>
-            <div class="col">
-                <ul class="connectedSortable">
-                    <li class="ui-state-highlight"><JobCardCmp></JobCardCmp></li>
-                    <li class="ui-state-highlight"><JobCardCmp></JobCardCmp></li>
-                    <li class="ui-state-highlight"><JobCardCmp></JobCardCmp></li>
-                    <li class="ui-state-highlight"><JobCardCmp></JobCardCmp></li>
-                    <li class="ui-state-highlight"><JobCardCmp></JobCardCmp></li>
-                </ul>
-            </div>
+            @if (MyPerson != null)
+            {
+                <EditForm Model="@MyPerson" OnValidSubmit="@SubmitValidForm" id="myfrm">
+                    <FluentValidationValidator />
+                    <div class="modal-body">
+                        <p>
+                            <label>First Name: </label>
+                            <InputText type="text" class="form-control" @bind-Value="MyPerson.FirstName" />
+                            <ValidationMessage For="@(() => MyPerson.FirstName)" />
+                        </p>
+
+                        <p>
+                            <label>Last Name: </label>
+                            <InputText type="text" class="form-control" @bind-Value="MyPerson.LastName" />
+                            <ValidationMessage For="@(() => MyPerson.LastName)" />
+                        </p>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-primary" type="submit">Submit</button>
+                    </div>
+                </EditForm>
+            }
         </div>
     </div>
-}
+</div>
 
 
 @code {
-    private List<DateTime> ListOfDays { get; set; }
+    Person MyPerson { get; set; } = new Person();
 
-    protected override async Task OnInitializedAsync()
+    async Task SubmitValidForm()
     {
-        ListOfDays = new List<DateTime>();
-
-        await Task.Delay(2000);   //simulate a slight delay such as calling an api
-
-        for (int counter = 0; counter <= 2; counter++)
-        {
-            ListOfDays.Add(DateTime.Today.AddDays(counter));
-        }
+        Console.WriteLine("Form Submitted Successfully!");
+        await jsRuntime.InvokeVoidAsync("hideModal", DotNetObjectReference.Create(this));
     }
 
-    #region drag drop
-
-    protected override async Task OnAfterRenderAsync(bool firstRender)
+    async Task ShowModal()
     {
-        await base.OnAfterRenderAsync(firstRender);
-
-        if (firstRender)
-        {
-            await Task.Delay(2000);
-            await jsRuntime.InvokeVoidAsync("enableDragDrop", DotNetObjectReference.Create(this));
-        }
+        await jsRuntime.InvokeVoidAsync("showModal", DotNetObjectReference.Create(this));
     }
 
-    #endregion
+    public class Person
+    {
+        public string FirstName { get; set; }
+        public string LastName { get; set; }
+    }
+
+    public class PersonValidator : AbstractValidator<Person>
+    {
+        public PersonValidator()
+        {
+            RuleFor(x => x.FirstName).NotEmpty().WithMessage("First name is required");
+        }
+    }
 }
 
 
