--- a/BlazorApp1/BlazorApp1/Client/Pages/FetchData.razor
+++ b/BlazorApp1/BlazorApp1/Client/Pages/FetchData.razor
@@ -14,36 +14,45 @@ else
 {
     <p>There are total of @forecasts.Count() weather forecast records</p>
 
-    <div style="height:600px; overflow-y: scroll;">
+    <EditForm Model="forecasts">
 
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Date</th>
-                    <th>Temp. (C)</th>
-                    <th>Temp. (F)</th>
-                    <th>Summary</th>
-                </tr>
-            </thead>
-            <tbody>
-                <Virtualize Context="forecast" ItemSize="50" ItemsProvider="@LoadItems">
-                    <ItemContent>
-                        <tr>
-                            <td>@forecast.Date.ToShortDateString()</td>
-                            <td>@forecast.TemperatureC</td>
-                            <td>@forecast.TemperatureF</td>
-                            <td>@forecast.Summary</td>
-                        </tr>
-                    </ItemContent>
-                    <Placeholder>
-                        <tr>
-                            <td colspan="4">Loading...</td>
-                        </tr>
-                    </Placeholder>
-                </Virtualize>
-            </tbody>
-        </table>
-    </div>
+        <div style="height:600px; overflow-y: scroll;">
+
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Temp. (C)</th>
+                        <th>Temp. (F)</th>
+                        <th>Summary</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <Virtualize Context="forecast" ItemSize="50" ItemsProvider="@LoadItems">
+                        <ItemContent>
+                            <tr @key="forecast.Id">
+                                <td>@forecast.Date.ToShortDateString()</td>
+                                <td>
+                                    <InputNumber class="form-control text-center input-sm" id="@("dp-tempc-input-" + forecast.Id.ToString())"
+                                                 type="number" step="1"
+                                                 Value="forecast.TemperatureC" TValue="int" ValueExpression="@(() => forecast.TemperatureC)" ValueChanged="x => OnTempCChanged(forecast, x)" />
+                                </td>
+                                <td>
+                                    @forecast.TemperatureF
+                                </td>
+                                <td>@forecast.Summary</td>
+                            </tr>
+                        </ItemContent>
+                        <Placeholder>
+                            <tr>
+                                <td colspan="4">Loading...</td>
+                            </tr>
+                        </Placeholder>
+                    </Virtualize>
+                </tbody>
+            </table>
+        </div>
+    </EditForm>
 }
 
 
@@ -63,5 +72,10 @@ else
         var items = forecasts.Skip(request.StartIndex).Take(numItems).ToList();
 
         return new ItemsProviderResult<WeatherForecast>(items, forecasts.Count());
+    }
+
+    private async Task OnTempCChanged(WeatherForecast forecast, int newValue)
+    {
+        forecast.TemperatureC = newValue;
     }
 }
