--- a/BlazorApp1/BlazorApp1/Client/_Imports.razor
+++ b/BlazorApp1/BlazorApp1/Client/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using BlazorApp1.Client
 @using BlazorApp1.Client.Shared
+@using Blazored.Typeahead
+@using BlazorStrap
